# agentkit

./: .gitignore  COMPETITION_ROADMAP.md  README.md  WRITEUP.md  pyproject.toml
demo/: banner.html  demo.sh  demo.tape
gemini-competition/: README.md  code.md  competition-research.md  deployment.md  google-tools-comparison.md  kaggle-discussion-summary.md  project-comparison.md  travel-agent-example.md
gemini-competition/agentkit/: COMPETITION_ROADMAP.md  plan.md  spec.md
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  generate.py  tools.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  gemini.py  schemas.py
src/generator/: __init__.py
tests/: __init__.py  test_generator.py
